# physics-sim-framework

./: .gitignore  CMakeLists.txt
apps/: ProjectileDemo.cpp
src/: main.cpp
src/io/: CsvLogger.h
src/math/: Vector2.h
src/physics/: Body.h  Forces.h  Integrator.h  Simulation.h
src/viz/: SfmlRenderer.cpp  SfmlRenderer.h
tests/: PhysicsTests.cpp  VectorTests.cpp
